--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://adrianklivecz.github.io/",
+  "homepage": "http://adrianklivecz.github.io/adrian-clivet-my-cv",
   "name": "adrian-clivet-my-cv",
   "version": "0.1.0",
   "private": true,
