--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "bootstrap": "^4.5.0",
     "emailjs-com": "^2.4.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "resolve-url-loader": "^3.1.2"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -45,6 +45,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-loader": "^3.0.4",
+    "gh-pages": "^3.1.0",
+    "jquery": "^3.6.0",
+    "tether": "^2.0.0"
   }
 }
